Fixed the input clicking functionality, and some css to make things more visible

--- a/public/modules/giftcards/css/giftcards.css
+++ b/public/modules/giftcards/css/giftcards.css
@@ -439,7 +439,7 @@ label.inputlabel {
   width: 50%;
   height: 20%;
   float: left;
-  color: white;
+  color: black;
   font-size: 1.2em;
   margin-bottom: 2.1%; /* 0.02/0.96 = 0.21 (try to match the padding from the other sides of the ul) */
 }
@@ -489,10 +489,10 @@ label.inputlabel {
 
 /* date picker styles */
 #clique_date_selection {
-  color: white;
+  color: black;
   width: 100%;
   text-align: center;
-  font-size: 1.2em;
+  font-size: 1.75em;
 }
 
 #clique_date_wrapper {
